--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial",
+  "name": "node-tutorial",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "validator": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2"
   }
 }
