--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "chalk": "^4.0.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "request": "^2.88.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.4"
   }
 }
